--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.asa.googlemaps"
+        applicationId "com.asa.googlemapsapp"
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
