--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.asa.googlemaps" >
+          package="com.asa.googlemapsapp" >
     <permission
-        android:name="com.asa.googlemaps.permission.MAPS_RECEIVE"
+        android:name="com.asa.googlemapsapp.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.asa.googlemaps.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.asa.googlemapsapp.permission.MAPS_RECEIVE" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -34,9 +34,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value=""/>
+            android:value="your-api-key"/>
     </application>
 
 </manifest>
